MDEV-20280 PERCENTILE_DISC() rejects temporal and string input