sql/item_windowfunc.cc
@@ -187,13 +187,6 @@ bool Item_window_func::check_result_type_of_order_item()
   case Item_sum::PERCENTILE_DISC_FUNC:
   {
     Item *src_item= window_spec->order_list->first->item[0];
-    Item_result rtype= src_item->cmp_type();
-    // TODO-10.5: Fix MDEV-20280 PERCENTILE_DISC() rejects temporal and string input
-    if (rtype != REAL_RESULT && rtype != INT_RESULT && rtype != DECIMAL_RESULT)
-    {
-      my_error(ER_WRONG_TYPE_FOR_PERCENTILE_FUNC, MYF(0), window_func()->func_name());
-      return true;
-    }
     Item_sum_percentile_disc *func=
       static_cast<Item_sum_percentile_disc*>(window_func());
     func->set_handler(src_item->type_handler());
